<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuAcciones">

    <LinearLayout
        android:layout_width="390dp"
        android:layout_height="715dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/idTextViewMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_menu_acciones"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"
            />

        <Button
            android:id="@+id/btnPesoActual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_get_peso_actual" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"
            />

        <Button
            android:id="@+id/btnPesoMaximo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_set_peso_maximo" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"
            />

        <Button
            android:id="@+id/btnModoJuego"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_set_modo_juego" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"
            />

        <Button
            android:id="@+id/btnCerrarBolsa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_cerrar_bolsa" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp"
            />

        <Button
            android:id="@+id/btnCambieBolsa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_cambie_bolsa" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>